--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.3.5",
     "@headlessui/react": "^1.7.18",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
