--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.0.0",
     "contentful": "^10.8.1",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.289.0",
     "next": "^14.1.3",
     "react": "^18.2.0",
